@@ -5,19 +5,21 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
-import quantum.dto.sgdb.SGBDGameSuccessResponse;
-import quantum.dto.sgdb.SGBDGridSuccessResponse;
-import quantum.dto.steam.SteamGame;
+import quantum.dto.sgdb.SGDBGameSuccessResponse;
+import quantum.dto.sgdb.SGDBGrid;
+import quantum.dto.sgdb.SGDBGridSuccessResponse;
 import quantum.dto.steam.SteamResponse;
 import quantum.dto.userGames.steamImport.UserGameImport;
 import quantum.dto.userGames.steamImport.UserGamesImportList;
-import quantum.service.SteamGridBDService;
+import quantum.service.SteamGridDBService;
 import quantum.service.SteamService;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 /**
  * Service implementation for Steam API.
@@ -27,31 +29,33 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SteamServiceImpl implements SteamService {
 
-    private final SteamGridBDService steamGridBDService;
-
-    private final WebClient webClient;
     private static final String EXTERNAL_API_URL = "http://api.steampowered.com/";
-    private static final String KEY = "44F5764DDFE092DDC655B6CB72D65170";
+    private final SteamGridDBService steamGridBDService;
+    private final WebClient webClient;
+
+    @Value("${steam.api.key}")
+    private String key;
 
     @Autowired
-    public SteamServiceImpl(SteamGridBDService steamGridBDService, WebClient.Builder webClientBuilder) {
+    public SteamServiceImpl(SteamGridDBService steamGridBDService, WebClient.Builder webClientBuilder) {
         this.steamGridBDService = steamGridBDService;
         this.webClient = webClientBuilder.baseUrl(EXTERNAL_API_URL).build();
     }
 
     /**
      * Get steam user.
+     *
      * @param steamId The steam id to search for
      * @return The user found.
      */
     @Override
     public String getUser(String steamId) {
-        String apiUrl = EXTERNAL_API_URL + "ISteamUser/GetPlayerSummaries/v0002/?key=" + KEY + "&steamids=" + steamId;
+        String apiUrl = EXTERNAL_API_URL + "ISteamUser/GetPlayerSummaries/v0002/?key=" + key + "&steamids=" + steamId;
         String response = webClient.get()
-                            .uri(apiUrl)
-                            .retrieve()
-                            .bodyToMono(String.class)
-                            .block();
+                .uri(apiUrl)
+                .retrieve()
+                .bodyToMono(String.class)
+                .block();
         // Return empty array if response is null
         if (response == null) {
             log.error("Error getting response from steam");
@@ -62,17 +66,18 @@ public class SteamServiceImpl implements SteamService {
 
     /**
      * Get steam games.
+     *
      * @param steamId The steam id to search for
      * @return The games found.
      */
     @Override
     public UserGamesImportList getGames(String steamId) {
-        String apiUrl = EXTERNAL_API_URL + "IPlayerService/GetOwnedGames/v0001/?key=" + KEY + "&steamid=" + steamId;
+        String apiUrl = EXTERNAL_API_URL + "IPlayerService/GetOwnedGames/v0001/?key=" + key + "&steamid=" + steamId;
         String response = webClient.get()
-                                .uri(apiUrl)
-                                .retrieve()
-                                .bodyToMono(String.class)
-                                .block();
+                .uri(apiUrl)
+                .retrieve()
+                .bodyToMono(String.class)
+                .block();
 
         List<UserGameImport> userGames = new ArrayList<>();
 
@@ -81,27 +86,35 @@ public class SteamServiceImpl implements SteamService {
 
             SteamResponse steamResponse = objectMapper.readValue(response, SteamResponse.class);
 
-            for (SteamGame game : steamResponse.getResponse().getGames()) {
+            steamResponse.getResponse().getGames().stream().parallel().forEach(game -> {
                 String gameResponse = steamGridBDService.getBySteamId(game.getAppId());
                 if (gameResponse == null) {
                     log.error("Game not found in steam grid db");
-                    continue;
+                    return;
                 }
-                SGBDGameSuccessResponse sgbdResponse = objectMapper.readValue(gameResponse, SGBDGameSuccessResponse.class);
-                String gridResponse = steamGridBDService.getGridsById(sgbdResponse.getData().getId());
-                SGBDGridSuccessResponse sgdbGridResponse = objectMapper.readValue(gridResponse, SGBDGridSuccessResponse.class);
-                String imageUrl = null;
-                if (!sgdbGridResponse.getData().isEmpty()) {
-                    imageUrl = sgdbGridResponse.getData().get(0).getUrl();
+                SGDBGameSuccessResponse sgdbResponse = null;
+                try {
+                    sgdbResponse = objectMapper.readValue(gameResponse, SGDBGameSuccessResponse.class);
+                    String gridResponse = steamGridBDService.getGridsById(sgdbResponse.getData().getId());
+                    SGDBGridSuccessResponse sgdbGridResponse = objectMapper.readValue(gridResponse, SGDBGridSuccessResponse.class);
+                    String imageUrl = null;
+                    if (!sgdbGridResponse.getData().isEmpty()) {
+                        Optional<SGDBGrid> sgdbGrid = sgdbGridResponse.getData().stream().filter(e -> e.getWidth() == 600 && e.getHeight() == 900).findFirst();
+                        imageUrl = sgdbGrid.orElse(sgdbGridResponse.getData().getFirst()).getUrl();
+                    } else {
+                        imageUrl = "https://cdn.cloudflare.steamstatic.com/steam/apps/" + game.getAppId() + "/library_600x900.jpg";
+                    }
+                    UserGameImport newUserGame = UserGameImport.builder()
+                            .name(sgdbResponse.getData().getName())
+                            .timePlayed(game.getPlaytime())
+                            .image(imageUrl)
+                            .sgdbId(sgdbResponse.getData().getId())
+                            .build();
+                    userGames.add(newUserGame);
+                } catch (JsonProcessingException e) {
+                    throw new RuntimeException(e);
                 }
-                UserGameImport newUserGame = UserGameImport.builder()
-                        .name(sgbdResponse.getData().getName())
-                        .timePlayed(game.getPlaytime())
-                        .image(imageUrl)
-                        .sgbdId(sgbdResponse.getData().getId())
-                        .build();
-                userGames.add(newUserGame);
-            }
+            });
 
         } catch (JsonProcessingException e) {
             throw new RuntimeException(e);
@@ -111,4 +124,5 @@ public class SteamServiceImpl implements SteamService {
                 .games(userGames)
                 .build();
     }
+
 }
